--- a/Resources/Prototypes/Entities/Clothing/Head/helmets.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/helmets.yml
@@ -299,7 +299,7 @@
 #ERT HELMETS
 #ERT Leader Helmet
 - type: entity
-  parent: ClothingHeadHelmetBasic
+  parent: [ BaseCentcommContraband, ClothingHeadHelmetBasic ]
   id: ClothingHeadHelmetERTLeader
   name: ERT leader helmet
   description: An in-atmosphere helmet worn by the leader of a Nanotrasen Emergency Response Team. Has blue highlights.
@@ -311,7 +311,7 @@
 
 #ERT Security Helmet
 - type: entity
-  parent: ClothingHeadHelmetBasic
+  parent: [ BaseCentcommContraband, ClothingHeadHelmetBasic ]
   id: ClothingHeadHelmetERTSecurity
   name: ERT security helmet
   description: An in-atmosphere helmet worn by security members of the Nanotrasen Emergency Response Team. Has red highlights.
@@ -323,7 +323,7 @@
 
 #ERT Medic Helmet
 - type: entity
-  parent: ClothingHeadHelmetBasic
+  parent: [ BaseCentcommContraband, ClothingHeadHelmetBasic ]
   id: ClothingHeadHelmetERTMedic
   name: ERT medic helmet
   description: An in-atmosphere helmet worn by medical members of the Nanotrasen Emergency Response Team. Has white highlights.
@@ -335,7 +335,7 @@
 
 #ERT Engineer Helmet
 - type: entity
-  parent: ClothingHeadHelmetBasic
+  parent: [ BaseCentcommContraband, ClothingHeadHelmetBasic ]
   id: ClothingHeadHelmetERTEngineer
   name: ERT engineer helmet
   description: An in-atmosphere helmet worn by engineering members of the Nanotrasen Emergency Response Team. Has orange highlights.
@@ -347,7 +347,7 @@
 
 #ERT Janitor Helmet
 - type: entity
-  parent: ClothingHeadHelmetBasic
+  parent: [ BaseCentcommContraband, ClothingHeadHelmetBasic ]
   id: ClothingHeadHelmetERTJanitor
   name: ERT janitor helmet
   description: An in-atmosphere helmet worn by janitorial members of the Nanotrasen Emergency Response Team. Has dark purple highlights.
