--- a/Resources/Prototypes/Roles/Jobs/departments.yml
+++ b/Resources/Prototypes/Roles/Jobs/departments.yml
@@ -63,6 +63,15 @@
   - HeadOfSecurity
   - ResearchDirector
   - Quartermaster
+  - CentralCommandOfficial
+  - CBURN
+  - ERTLeader
+  - ERTChaplain
+  - ERTJanitor
+  - ERTMedic
+  - ERTSecurity
+  - ERTEngineer
+  - Deathsquad
   primary: false
   weight: 100
 
