Who the fuck putted ERT into fun?!

--- a/Resources/Prototypes/Entities/Objects/Misc/identification_cards.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/identification_cards.yml
@@ -519,7 +519,7 @@
     - state: gold
     - state: ert_medic
   - type: PresetIdCard
-    job: ERTMedic
+    job: ERTMedical
 
 - type: entity
   parent: IDCardStandard
