--- a/Resources/Prototypes/Roles/Jobs/departments.yml
+++ b/Resources/Prototypes/Roles/Jobs/departments.yml
@@ -43,7 +43,7 @@
   - ERTLeader
   - ERTChaplain
   - ERTJanitor
-  - ERTMedic
+  - ERTMedical
   - ERTSecurity
   - ERTEngineer
   - Deathsquad
@@ -68,7 +68,7 @@
   - ERTLeader
   - ERTChaplain
   - ERTJanitor
-  - ERTMedic
+  - ERTMedical
   - ERTSecurity
   - ERTEngineer
   - Deathsquad
