salvage neck loadout fix

--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -645,6 +645,7 @@
 - type: loadoutGroup
   id: SalvageSpecialistNeck
   name: loadout-group-salvage-specialist-neck
+  minLimit: 0
   loadouts:
   - MinerCloak
   - SaMantle
