--- a/Resources/Prototypes/Roles/Jobs/departments.yml
+++ b/Resources/Prototypes/Roles/Jobs/departments.yml
@@ -36,6 +36,7 @@
 - type: department
   id: CentralCommand
   name: department-CentralCommand
+  description: department-CentralCommand-description
   color: "#0c344d"
   roles:
   - CentralCommandOfficial
