Updated the rat king prototype to keep the original rat king flavor.

--- a/Resources/Prototypes/Entities/Mobs/NPCs/regalrat.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/regalrat.yml
@@ -102,6 +102,16 @@
   - type: MinionMaster
     doesSummonCostFood: true
     armyMobSpawnId: MobRatServant
+    actionRaiseArmy: ActionRatKingRaiseArmy
+    actionOrderStay: ActionRatKingOrderStay
+    actionOrderFollow: ActionRatKingOrderFollow
+    actionOrderAttack: ActionRatKingOrderCheeseEm
+    actionOrderLoose: ActionRatKingOrderLoose
+    orderCallouts:
+      Stay: RatKingCommandStay
+      Follow: RatKingCommandFollow
+      Attack: RatKingCommandCheeseEm
+      Loose: RatKingCommandLoose
     hungerPerArmyUse: 25
   - type: RatKing
     hungerPerDomainUse: 50
