--- a/Resources/Prototypes/Reagents/fun.yml
+++ b/Resources/Prototypes/Reagents/fun.yml
@@ -52,7 +52,7 @@
   color: "#FFD35D"
   tileReactions:
   - !type:CreateEntityTileReaction
-    entity: MobAngryBee
+    entity: MobBee
     usage: 2
     maxOnTile: 2
     randomOffsetMax: 0.3
