changed the name of syndizine to subjuzine

--- a/Resources/Prototypes/Catalog/Fills/Boxes/syndicate.yml
+++ b/Resources/Prototypes/Catalog/Fills/Boxes/syndicate.yml
@@ -72,7 +72,7 @@
   parent: [BoxCardboard, BaseSyndicateContraband]
   id: AnimalFriendsKit
   name: animal friends kit
-  description: Contains 4 doses of Syndizine to convert animals into your henchmen, as well as two mice to inject.
+  description: Contains 4 doses of Subjuzine to convert animals into your henchmen, as well as two mice to inject.
   components:
   - type: Sprite
     layers:
@@ -83,7 +83,7 @@
       - id: MobMouse
         amount: 2
       - id: Syringe
-      - id: SyndizineChemistryVial
+      - id: SubjuzineChemistryVial
 
 - type: entity
   parent: [BoxCardboard, BaseSyndicateContraband]
