--- a/Resources/Prototypes/Entities/Objects/Specific/chemistry-vials.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/chemistry-vials.yml
@@ -119,8 +119,8 @@
       tags: []
 
 - type: entity
-  id: SyndizineChemistryVial
-  name: syndizine vial
+  id: SubjuzineChemistryVial
+  name: subjuzine vial
   parent: BaseChemistryEmptyVial
   components:
     - type: SolutionContainerManager
@@ -128,7 +128,7 @@
         beaker:
           maxVol: 30
           reagents:
-            - ReagentId: Syndizine
+            - ReagentId: Subjuzine
               Quantity: 20
     - type: Tag
       tags: []
