--- a/Resources/Prototypes/Reagents/medicine.yml
+++ b/Resources/Prototypes/Reagents/medicine.yml
@@ -877,9 +877,9 @@
           min: 5
 
 - type: reagent
-  id: Syndizine
-  name: reagent-name-syndizine
-  desc: reagent-desc-syndizine
+  id: Subjuzine
+  name: reagent-name-subjuzine
+  desc: reagent-desc-subjuzine
   group: Medicine
   physicalDesc: reagent-physical-desc-enigmatic
   flavor: magical
