Add the recruiter ghost role from Delta-V

--- a/Resources/Prototypes/GameRules/unknown_shuttles.yml
+++ b/Resources/Prototypes/GameRules/unknown_shuttles.yml
@@ -13,6 +13,8 @@
   id: UnknownShuttlesFreelanceTable
   table: !type:AllSelector # we need to pass a list of rules, since rules have further restrictions to consider via StationEventComp
     children:
+    - !type:NestedSelector # DeltaV
+      tableId: UnknownShuttlesFreelanceTableDeltaV
     - id: UnknownShuttleSyndieEvacPod
 
 - type: entityTable
