2 new nuke tracks

--- a/Resources/Prototypes/SoundCollections/NukeMusic.yml
+++ b/Resources/Prototypes/SoundCollections/NukeMusic.yml
@@ -7,3 +7,5 @@
     - /Audio/StationEvents/sound_station_14.ogg
     - /Audio/StationEvents/hurry_up.ogg
     - /Audio/StationEvents/cyber_grind.ogg
+    - /Audio/StationEvents/roadkilla.ogg
+    - /Audio/StationEvents/ruinous_intnt.ogg
