--- a/Resources/Prototypes/Catalog/Jukebox/Standard.yml
+++ b/Resources/Prototypes/Catalog/Jukebox/Standard.yml
@@ -195,3 +195,75 @@
   name: J-Cut & Kolt Siewerts - The Flute Tune (Soulpride Remix)
   path:
     path: /Audio/Jukebox/the_flute_tune.ogg
+
+- type: jukebox
+  id: CreateAWrestler
+  name: Wrestlemania X8 - Create-A-Wrestler
+  path:
+    path: /Audio/Jukebox/create_a_wrestler.ogg
+
+- type: jukebox
+  id: QuantumSpawn
+  name: ELFL - Quantum Spawn
+  path:
+    path: /Audio/Jukebox/quantum_spawn.ogg
+
+- type: jukebox
+  id: Bodybuilder
+  name: Pilotredsun - Bodybuilder
+  path:
+    path: /Audio/Jukebox/bodybuilder.ogg
+
+- type: jukebox
+  id: AlongWithBrew
+  name: Pilotredsky - Along With Brew
+  path:
+    path: /Audio/Jukebox/along_with_brew.ogg
+
+- type: jukebox
+  id: NeoSFStrut
+  name: Aethernaut - Neo-SF Strut
+  path:
+    path: /Audio/Jukebox/neosf_strut.ogg
+
+- type: jukebox
+  id: Match
+  name: Fred Mug - Match
+  path:
+    path: /Audio/Jukebox/match.ogg
+
+- type: jukebox
+  id: Impossible
+  name: Darren Knob - Impossible
+  path:
+    path: /Audio/Jukebox/impossible.ogg
+
+- type: jukebox
+  id: EncounterACaterpillar
+  name: Solaris - song that plays when you encounter a caterpillar
+  path:
+    path: /Audio/Jukebox/song_that_plays_when_you_encounter_a_caterpillar.ogg
+
+- type: jukebox
+  id: GETENUF
+  name: Hideki Naganuma - GET ENUF
+  path:
+    path: /Audio/Jukebox/get_enuf.ogg
+
+- type: jukebox
+  id: ZIPYKKARRANGE
+  name: Rukunetsu - ZIP YKK ARRANGE
+  path:
+    path: /Audio/Jukebox/zip_ykk_arrange.ogg
+
+- type: jukebox
+  id: ThrashardInTheCaveX68000
+  name: Akumajou Dracula X68000 - Thrashard in the Cave
+  path:
+    path: /Audio/Jukebox/thrashard_in_the_cave_x68000.ogg
+
+- type: jukebox
+  id: TwoDaysOff
+  name: KiloWatts - Two Days Off
+  path:
+    path: /Audio/Jukebox/twodaysoff.ogg
