including wave 3 new tracks

--- a/Resources/Audio/Jukebox/attributions.yml
+++ b/Resources/Audio/Jukebox/attributions.yml
@@ -150,3 +150,63 @@
   license: "Custom."
   copyright: "The Flute Tune (Soulpride Remix) by J-Cut & Kolt Siewerts"
   source: "https://www.youtube.com/watch?v=IwLSrNu1ppI"
+
+- files: ["create_a_wrestler.ogg"]
+  license: "Custom. Suggested by HunBunQueen"
+  copyright: "Create-A-Wrestler by Wrestlemania X8"
+  source: "https://www.youtube.com/watch?v=wf7BMXcGFR4"
+  
+- files: ["quantum_spawn.ogg"]
+  license: "Custom. Suggested by hivehum"
+  copyright: "Quantum Spawn by ELFL"
+  source: "https://www.youtube.com/watch?v=eVI1MwUtBy4"
+  
+- files: ["bodybuilder.ogg"]
+  license: "Custom. Suggested by Twibz"
+  copyright: "Bodybuilder by Pilotredsun"
+  source: "https://www.youtube.com/watch?v=g0d9B9oL2h0"
+  
+- files: ["along_with_brew.ogg"]
+  license: "Custom. Suggested by EpicToast"
+  copyright: "Along With Brew by Pilotredsky"
+  source: "https://www.youtube.com/watch?v=qbIAoNR883A"
+  
+- files: ["neosf_strut.ogg"]
+  license: "Custom. Suggested by Wowls"
+  copyright: "Neo-SF Strut by Aethernaut"
+  source: "https://www.youtube.com/watch?v=wgliv2t_fY4"
+  
+- files: ["match.ogg"]
+  license: "Custom. Suggested by Masa"
+  copyright: "Match by Fred Mug"
+  source: "https://www.youtube.com/watch?v=KZ02GxqrAv8"
+  
+- files: ["impossible.ogg"]
+  license: "Custom. Suggested by hivehum"
+  copyright: "Impossible by Darren Knob"
+  source: "https://www.youtube.com/watch?v=Vrc5lv0O8yo"
+  
+- files: ["song_that_plays_when_you_encounter_a_caterpillar.ogg"]
+  license: "Custom. Suggested by Stonylogray"
+  copyright: "song that plays when you encounter a caterpillar by Solaris"
+  source: "https://www.youtube.com/watch?v=3LGdFKIXr9I"
+  
+- files: ["get_enuf.ogg"]
+  license: "Custom. Suggested by Wowls"
+  copyright: "GET ENUF by Hideki Naganuma"
+  source: "https://www.youtube.com/watch?v=ODy6rmrh4Og"
+  
+- files: ["zip_ykk_arrange.ogg"]
+  license: "Custom."
+  copyright: "ZIP YKK ARRANGE by Rukunetsu"
+  source: "https://youtube.com/watch?v=ZPYiZIrmLVQ"
+  
+- files: ["thrashard_in_the_cave_x68000.ogg"]
+  license: "Custom. Suggested by flanburgr"
+  copyright: "Thrashard in the Cave (X68000) by IKA-chan, Devi Kobayashi, Shin-chan, Jigokuguruma Nakamura"
+  source: "https://www.youtube.com/watch?v=mW4EF2E1_tg"
+  
+- files: ["twodaysoff.ogg"]
+  license: "Custom. Suggested by Wowls"
+  copyright: "Two Days Off by KiloWatts"
+  source: "https://www.youtube.com/watch?v=dK9oCBXX6Ec"
