wave 3 new tracks

--- a/Resources/Audio/Lobby/attributions.yml
+++ b/Resources/Audio/Lobby/attributions.yml
@@ -218,3 +218,128 @@
   license: "Custom."
   copyright: "The Flute Tune (Soulpride Remix) by J-Cut & Kolt Siewerts"
   source: "https://www.youtube.com/watch?v=IwLSrNu1ppI"
+
+- files: ["squarepusher.ogg"]
+  license: "Custom. Suggested by HunBunQueen"
+  copyright: "Squarepusher Theme by Squarepusher"
+  source: "https://www.youtube.com/watch?v=wiycAAoaK2k"
+  
+- files: ["sam_jones.ogg"]
+  license: "Custom. Suggested by fore"
+  copyright: "Sam Jones by Leslie Fish"
+  source: "https://www.youtube.com/watch?v=IIjuYw2jwtw"
+  
+- files: ["bee_like_that.ogg"]
+  license: "Custom. Suggested by flanburgr"
+  copyright: "Bee like that by eebrozgi"
+  source: "https://www.youtube.com/watch?v=XqTwCuYrlgo"
+  
+- files: ["ai_bomb.ogg"]
+  license: "Custom. Suggested by Twibz"
+  copyright: "Artificial Intelligence Bomb (Remix) by theta, OG by naruto2413"
+  source: "https://www.youtube.com/watch?v=CBFLKcEo18s"
+  
+- files: ["diesel.ogg.ogg"]
+  license: "Custom. Suggested by Phoebe"
+  copyright: "diesel.ogg by buttlord music"
+  source: "https://www.youtube.com/watch?v=OOyqr1JB_ac"
+  
+- files: ["ikebukuro.ogg"]
+  license: "Custom. Suggested by starplatinumb"
+  copyright: "Ikebukuro by Haramaself"
+  source: "https://www.youtube.com/watch?v=5N8ckaOrnXQ"
+  
+- files: ["pe-ri-ca.ogg"]
+  license: "Custom. Suggested by mira"
+  copyright: "PE-RI-CA by RAITO"
+  source: "https://www.youtube.com/watch?v=XxSiOax6__k"
+  
+- files: ["actors_anteroom.ogg"]
+  license: "Custom. Suggested by HunBunQueen"
+  copyright: "Actor's Anteroom by RAITO"
+  source: "https://www.youtube.com/watch?v=PeDJEO5ghZs"
+  
+- files: ["milkyway_battle.ogg"]
+  license: "Custom. Suggested by YesOfCourse"
+  copyright: "MilkyWay (Battle) by Ben Prunty"
+  source: "https://www.youtube.com/watch?v=AgL6jbqDbx8"
+  
+- files: ["mantis_battle.ogg"]
+  license: "Custom. Suggested by YesOfCourse"
+  copyright: "Mantis Battle by Ben Prunty"
+  source: "https://www.youtube.com/watch?v=RdiqG3RGBec "
+  
+- files: ["organic_journey.ogg"]
+  license: "Custom. Suggested by Lazy"
+  copyright: "Organic Journey (Melodie du Crouton) by Doug Brown, Harmonious Wail"
+  source: "https://www.youtube.com/watch?v=6lxYnuPakC8"
+  
+- files: ["pizzatron_3000.ogg"]
+  license: "Custom. Suggested by Phoebe"
+  copyright: "Pizzatron 3000 by Chris Hendricks"
+  source: "https://www.youtube.com/watch?v=LEZg_5PcUKI"
+  
+- files: ["special_stage.ogg"]
+  license: "Custom. Suggested by Lightning"
+  copyright: "Special Stage by Naofumi Hataya, Masafumi Ogata"
+  source: "https://www.youtube.com/watch?v=cuzotd7eQvc"
+  
+- files: ["foot_traffic.ogg"]
+  license: "Custom."
+  copyright: "Foot Traffic by 2 mello"
+  source: "https://youtube.com/watch?v=lWdlxuAfjpo"
+  
+- files: ["cmon.ogg"]
+  license: "Custom."
+  copyright: "cmon by 2 mello"
+  source: "https://youtube.com/watch?v=lzksfBUMLyc"
+  
+- files: ["create_a_wrestler.ogg"]
+  license: "Custom. Suggested by HunBunQueen"
+  copyright: "Create-A-Wrestler by Wrestlemania X8"
+  source: "https://www.youtube.com/watch?v=wf7BMXcGFR4"
+  
+- files: ["quantum_spawn.ogg"]
+  license: "Custom. Suggested by hivehum"
+  copyright: "Quantum Spawn by ELFL"
+  source: "https://www.youtube.com/watch?v=eVI1MwUtBy4"
+  
+- files: ["bodybuilder.ogg"]
+  license: "Custom. Suggested by Twibz"
+  copyright: "Bodybuilder by Pilotredsun"
+  source: "https://www.youtube.com/watch?v=g0d9B9oL2h0"
+  
+- files: ["along_with_brew.ogg"]
+  license: "Custom. Suggested by EpicToast"
+  copyright: "Along With Brew by Pilotredsky"
+  source: "https://www.youtube.com/watch?v=qbIAoNR883A"
+  
+- files: ["neosf_strut.ogg"]
+  license: "Custom. Suggested by Wowls"
+  copyright: "Neo-SF Strut by Aethernaut"
+  source: "https://www.youtube.com/watch?v=wgliv2t_fY4"
+  
+- files: ["match.ogg"]
+  license: "Custom. Suggested by Masa"
+  copyright: "Match by Fred Mug"
+  source: "https://www.youtube.com/watch?v=KZ02GxqrAv8"
+  
+- files: ["impossible.ogg"]
+  license: "Custom. Suggested by hivehum"
+  copyright: "Impossible by Darren Knob"
+  source: "https://www.youtube.com/watch?v=Vrc5lv0O8yo"
+  
+- files: ["song_that_plays_when_you_encounter_a_caterpillar.ogg"]
+  license: "Custom. Suggested by Stonylogray"
+  copyright: "song that plays when you encounter a caterpillar by Solaris"
+  source: "https://www.youtube.com/watch?v=3LGdFKIXr9I"
+  
+- files: ["get_enuf.ogg"]
+  license: "Custom. Suggested by Wowls"
+  copyright: "GET ENUF by Hideki Naganuma"
+  source: "https://www.youtube.com/watch?v=ODy6rmrh4Og"
+  
+- files: ["zip_ykk_arrange.ogg"]
+  license: "Custom."
+  copyright: "ZIP YKK ARRANGE by Rukunetsu"
+  source: "https://youtube.com/watch?v=ZPYiZIrmLVQ"
