--- a/Resources/Audio/Lobby/attributions.yml
+++ b/Resources/Audio/Lobby/attributions.yml
@@ -326,7 +326,7 @@
   
 - files: ["impossible.ogg"]
   license: "Custom. Suggested by hivehum"
-  copyright: "Impossible by Darren Knob"
+  copyright: "Impossible by Darren Korb"
   source: "https://www.youtube.com/watch?v=Vrc5lv0O8yo"
   
 - files: ["song_that_plays_when_you_encounter_a_caterpillar.ogg"]
