--- a/Resources/Prototypes/SoundCollections/lobby.yml
+++ b/Resources/Prototypes/SoundCollections/lobby.yml
@@ -66,3 +66,4 @@
     - /Audio/Lobby/song_that_plays_when_you_encounter_a_caterpillar.ogg
     - /Audio/Lobby/get_enuf.ogg
     - /Audio/Lobby/zip_ykk_arrange.ogg
+    - /Audio/Lobby/gondalbad.ogg
