--- a/Resources/Prototypes/Entities/Objects/Fun/snap_pops.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/snap_pops.yml
@@ -33,7 +33,7 @@
     maxIntensity: 0.01
     intensitySlope: 1
     totalIntensity: 0.01
-    canThrowItems: false #Snap pops throwing away beakers, jugs and such caused them to be spilled/destroyed
+    canThrowItems: false
 
 - type: entity
   parent: BaseStorageItem
